# gofiletable

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  table.go  table_test.go
.github/workflows/: bazel-test.yml
command/: BUILD.bazel  command.go
filesystem/: BUILD.bazel  filesystem.go  memfs.go  memfs_test.go
table/: BUILD.bazel  table.go  table_test.go
web/: BUILD.bazel  web.go
