module(
    name = "gofiletable",
    version = "0.1.0",
)

# Bazel rules for Go
bazel_dep(name = "rules_go", version = "0.54.1", repo_name = "io_bazel_rules_go")

# Configure Go version
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.3")
use_repo(go_sdk, "go_default_sdk")

# Gazelle for generating BUILD files
bazel_dep(name = "gazelle", version = "0.43.0")

# Register Go toolchains
register_toolchains("@go_default_sdk//:all")