load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["command.go"],
    importpath = "github.com/jaeyeom/gofiletable/command",
    visibility = ["//visibility:private"],
    deps = ["//table:go_default_library"],
)

go_binary(
    name = "command",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
