load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "filesystem.go",
        "memfs.go",
    ],
    importpath = "github.com/jaeyeom/gofiletable/filesystem",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["memfs_test.go"],
    embed = [":go_default_library"],
)
